# Centralized-Campus-System-Project

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  package-lock.json
Campus-Equipment-Rental/: package-lock.json
Campus-Facility-Reservation-System/: requirements.txt
Campus-Secure-Marketplace-System/: requirements.txt
backends/: .env.example  init_db.py  master_init_db.py  schema_equipment.sql  schema_marketplace.sql
dev-plans-docs/: admin-integration.md
standalone-components/Campus-Facility-Reservation-System/backend/: pyproject.toml
standalone-components/Campus-Facility-Reservation-System/backend/app/api/v1/: bookings.py  facilities.py  health.py  notifications.py  tokens.py
standalone-components/Campus-Facility-Reservation-System/backend/app/core/: config.py
standalone-components/Campus-Facility-Reservation-System/backend/app/db/: base.py  models.py
standalone-components/Campus-Facility-Reservation-System/backend/app/db/crud/: __init__.py  facility.py  log.py  slot.py
standalone-components/Campus-Facility-Reservation-System/backend/app/db/migrations/: env.py
standalone-components/Campus-Facility-Reservation-System/backend/app/services/: cancellation_service.py  facility_service.py  overlap_resolution_service.py
standalone-components/Campus-Facility-Reservation-System/backend/app/tests/: test_approvals.py  test_auth.py  test_booking_rollback.py  test_slots.py
standalone-components/Campus-Facility-Reservation-System/backend/app/utils/: email_notifications.py  exceptions.py  response_helpers.py
(+607 files in other folders)
